--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "webpack-dev-server --open"
   },
   "devDependencies": {
+    "html-webpack-plugin": "^2.30.1",
     "ts-loader": "^2.3.4",
     "typescript": "^2.4.2",
     "webpack": "^3.5.5",
