--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "html-webpack-plugin": "^2.30.1",
     "ts-loader": "^2.3.4",
     "typescript": "^2.4.2",
+    "vue-loader": "^13.0.4",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1"
   },
