--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ts-loader": "^2.3.4",
     "typescript": "^2.4.2",
     "vue-loader": "^13.0.4",
+    "vue-template-compiler": "^2.4.2",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1"
   },
