--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "html-webpack-plugin": "^2.30.1",
     "ts-loader": "^2.3.4",
     "tslint": "^5.7.0",
+    "tslint-loader": "^3.5.3",
     "typescript": "^2.4.2",
     "vue-loader": "^13.0.4",
     "vue-template-compiler": "^2.4.2",
