--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "webpack-dev-server --open"
   },
   "devDependencies": {
+    "css-loader": "^0.28.7",
     "html-webpack-plugin": "^2.30.1",
     "ts-loader": "^2.3.4",
     "tslint": "^5.7.0",
