Deploy production build

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack",
+    "build:production": "webpack -p",
     "start": "webpack-dev-server --open"
   },
   "devDependencies": {
